<resources>
    <string name="app_name">Foodbuddy</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="recipes">Recipes</string>
    <string name="my_fridge">My fridge</string>
    <string name="my_meal_plan">My meal plan</string>
    <string name="my_profile">My profile</string>
    <string name="user_image">user_image</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="suggested_recipes">Suggested recipes</string>
    <string name="product_s_image">Product\'s image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_button">favourite_button</string>
    <string name="not_fav_button">not_favourite_button</string>
</resources>
